--- a/BiteSquad/index.html
+++ b/BiteSquad/index.html
@@ -24,7 +24,7 @@
             </figure>
             <h3>Pizza</h3>
             <p>Delicious pizza made with fresh ingredients</p>
-            <p style="color: green;font-size: xx-large;">$10</p>
+            <p style="color: rgb(128, 115, 0);font-size: xx-large;">$10</p>
           </div>
         <div class="card">
             <figure>
@@ -32,7 +32,7 @@
             </figure>
             <h3>Burger</h3>
             <p>Classic burger with juicy patty and veggies</p>
-            <p style="color: green;font-size: xx-large;">$8</p>
+            <p style="color: red;font-size: xx-large;">$8</p>
           </div>
         <!-- Add more featured items here -->
     </section>
