--- a/BiteSquad/index.html
+++ b/BiteSquad/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BiteSquad</title>
     <link rel="stylesheet" href="styles.css">
@@ -9,11 +10,23 @@
 <body>
     <header>
         <img id="logo" src="logo.png" alt="BiteSquad">
+    </div>
+    <div class="bar">
+        <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-xmark"></i>
+    </div>
+</div>
+</div>
+<div class="search" id="search input">
+    <input type="search">
+    <i class="fa-solid fa-magnifying-glass  searchicon"></i>
+</div>
+</div>
     </header>
     
     <section class="hero">
         <h2>Delicious Food Delivered to Your Door</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <p>WE ARE HERE TO SOLVE YOUR CRAVINGS</p>
         <a href="#" class="btn">Order Now</a>
     </section>
 
@@ -24,7 +37,7 @@
             </figure>
             <h3>Pizza</h3>
             <p>Delicious pizza made with fresh ingredients</p>
-            <p style="color: black;(128, 115, 0);font-size: xx-large;">$16</p>
+            <p style="color: black;(128, 115, 0);font-size: xx-large;">Rs. 16</p>
           </div>
         <div class="card">
             <figure>
@@ -32,7 +45,7 @@
             </figure>
             <h3>Burger</h3>
             <p>Classic burger with juicy patty and veggies</p>
-            <p style="color: black;(72, 255, 0);font-size: xx-large;">$10</p>
+            <p style="color: black;(72, 255, 0);font-size: xx-large;">Rs. 10</p>
           </div>
         <!-- Add more featured items here -->
     </section>
