--- a/BiteSquad/index.html
+++ b/BiteSquad/index.html
@@ -17,15 +17,24 @@
     </div>
 </div>
 </div>
-<div class="search" id="search input">
-    <input type="search">
-    <i class="fa-solid fa-magnifying-glass  searchicon"></i>
+<div class="nav">
+    <ul>
+        <a href="#">
+            <li >home</li>
+        </a>
+        <a href="#">
+            <li >Menu</li>
+        </a>
+        <a href="#">
+            <li > Table Booking</li>
+        </a>
 </div>
 </div>
+
     </header>
     
     <section class="hero">
-        <h2>Delicious Food Delivered to Your Door</h2>
+        <h2>Welcome to the world of exquisite taste</h2>
         <p>WE ARE HERE TO SOLVE YOUR CRAVINGS</p>
         <a href="#" class="btn">Order Now</a>
     </section>
