--- a/BiteSquad/index.html
+++ b/BiteSquad/index.html
@@ -20,14 +20,15 @@
 <div class="nav">
     <ul>
         <a href="#">
-            <li >home</li>
+            <li >Home</li>
         </a>
         <a href="#">
             <li >Menu</li>
         </a>
         <a href="#">
-            <li > Table Booking</li>
+            <li >Table Booking</li>
         </a>
+        </ul>
 </div>
 </div>
 
