--- a/BiteSquad/ORDER.HTML
+++ b/BiteSquad/ORDER.HTML
@@ -5,7 +5,9 @@
 
 <link rel="backgroundsheet" href="backgroung.css">
 </head>
-<body
+
+<body style="background-color:rgb(243, 200, 121);">
+
 <h2>Contact Details:</h2>
 
          <label for="name">Contact Number:</label>
