--- a/BiteSquad/ORDER.HTML
+++ b/BiteSquad/ORDER.HTML
@@ -24,6 +24,8 @@
          <input type="text" id="name" required><br>
          <label for="name">Pincode</label>
          <input type="text" id="name" required><br>
+         
+         <input type="text" id="name" required><br>
              <form id="payment-form">
          
              <h2>Payment Information</h2>
