--- a/BiteSquad/index.html
+++ b/BiteSquad/index.html
@@ -188,12 +188,12 @@
          </div>
         </section>
          <section class="hero">
-            <h3> <font size="7">MOJITO</font size> </h3>
+            <h3> <font size="7">MOCKTAILS</font size> </h3>
          <p>The unmatchable flavour and the vibrant hue makes this not only a feast for eyes but also for your taste buds!</p>
         </section>
         <div class="card">
         </figure>
-        <img src="Vigin mojito cocktail.jpg" alt="Image 1">
+        <img src="Vigin mojito.jpg" alt="Image 1">
         <h4> Vigin mojito cocktail</h4>
         <p> Refreshing mix of mint, lime, and simple syrup topped with soda water. </p>
         <p style="color: black;(128, 115, 0);font-size: xx-large;">Rs. 100</p>
