--- a/BiteSquad/index.html
+++ b/BiteSquad/index.html
@@ -193,8 +193,8 @@
         </section>
         <div class="card">
         </figure>
-        <img src="Vigin mojito.jpg" alt="Image 1">
-        <h4> Vigin mojito cocktail</h4>
+        <img src="Vigin mojito cocktail.jpg" alt="Image 1">
+        <h4> Vigin mojito </h4>
         <p> Refreshing mix of mint, lime, and simple syrup topped with soda water. </p>
         <p style="color: black;(128, 115, 0);font-size: xx-large;">Rs. 100</p>
             
